// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Methods decorators should add Methods metadata to a class when decorated with @All 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @All 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "all",
      "path": "/All",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "all",
      "path": "/All2",
    },
  ],
}
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Delete 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Delete 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "delete",
      "path": "/Delete",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "delete",
      "path": "/Delete2",
    },
  ],
}
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Get 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Get 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "get",
      "path": "/Get",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "get",
      "path": "/Get2",
    },
  ],
}
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Head 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Head 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "head",
      "path": "/Head",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "head",
      "path": "/Head2",
    },
  ],
}
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Patch 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Patch 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "patch",
      "path": "/Patch",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "patch",
      "path": "/Patch2",
    },
  ],
}
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Post 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Post 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "post",
      "path": "/Post",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "post",
      "path": "/Post2",
    },
  ],
}
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Put 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add Methods metadata to a class when decorated with @Put 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "put",
      "path": "/Put",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "put",
      "path": "/Put2",
    },
  ],
}
`;

exports[`Methods decorators should add method metadata to a class when decorated with @httpMethod 1`] = `
[
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`Methods decorators should add method metadata to a class when decorated with @httpMethod 2`] = `
{
  "test": [
    PropDecoratorFactory {
      "method": "get",
      "path": "foo",
    },
  ],
  "test2": [
    PropDecoratorFactory {
      "method": "foo",
      "path": "bar",
    },
  ],
  "test3": [
    PropDecoratorFactory {
      "method": "bar",
      "path": "foo",
    },
  ],
}
`;
